--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -23,8 +23,9 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+fix_encoder: false
+fix_transform: false
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_fix
+output_dir: outputs/thumos14_e2e_slowfast_reproduce
 
