--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -26,6 +26,10 @@ batch_size: 4
 fix_encoder: false
 fix_transform: false
 
+# Image
+img_resize: 256
+img_crop_size: 224
+
 # output
 output_dir: outputs/thumos14_e2e_slowfast_reproduce
 
