--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -23,13 +23,13 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: false
+fix_encoder: true
 fix_transform: false
 
 # Image
-img_resize: 110
-img_crop_size: 96
+img_resize: 256
+img_crop_size: 224
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_reproduce_110
+output_dir: outputs/thumos14_e2e_slowfast_fix_encoder_256
 
