--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -23,7 +23,7 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+fix_encoder: false
 fix_transform: false
 
 # Image
@@ -31,5 +31,5 @@ img_resize: 256
 img_crop_size: 224
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_fix_encoder_256
+output_dir: outputs/thumos14_e2e_slowfast_reproduce_256
 
