--- a/configs/thumos14_e2e_slowfast_large.yml
+++ b/configs/thumos14_e2e_slowfast_large.yml
@@ -21,10 +21,10 @@ input_type: image
 
 # training setting (not finialized)
 lr: 0.0001
-batch_size: 1
+batch_size: 4
 # batch_size: 2
 
-fix_encoder: false
+fix_encoder: true
 fix_transform: false
 
 # Image
