--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -35,8 +35,8 @@ img_crop_size: 224
 # img_crop_size: 96
 
 # Training
-act_reg: false
-# set_cost_class: 2
+# act_reg: false
+set_cost_class: 2
 
 # output
 output_dir: outputs/thumos14_e2e_slowfast_no_act_reg
