--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -20,7 +20,7 @@ test_slice_overlap: 0.25
 input_type: image
 
 # training setting (not finialized)
-lr: 0.0001
+lr: 0.0002
 batch_size: 4
 
 fix_encoder: false
@@ -36,7 +36,7 @@ img_crop_size: 224
 
 # Training
 # act_reg: false
-set_cost_class: 2
+# set_cost_class: 2
 
 # output
 output_dir: outputs/thumos14_e2e_slowfast_no_act_reg
