--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -37,7 +37,7 @@ img_crop_size: 224
 # Training
 # act_reg: false
 # set_cost_class: 2
-activation: 'gelu'
+# activation: 'gelu'
 
 # output
 output_dir: outputs/thumos14_e2e_slowfast_no_act_reg
