--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -23,7 +23,7 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+fix_encoder: false
 fix_transform: false
 
 # Image
@@ -40,5 +40,5 @@ img_crop_size: 224
 # activation: 'gelu'
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_strong_deep
+output_dir: outputs/thumos14_e2e_slowfast_strong_deep_96
 
