--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -38,6 +38,7 @@ img_crop_size: 224
 # act_reg: false
 # set_cost_class: 2
 # activation: 'gelu'
+rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
 output_dir: outputs/thumos14_e2e_slowfast_strong_deep_96
