--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -23,15 +23,15 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+fix_encoder: false
 fix_transform: false
 
 # Image
 # img_resize: 440
-img_resize: 256
+img_resize: 110
 # img_resize: 110
 # img_crop_size: 384
-img_crop_size: 224
+img_crop_size: 96
 # img_crop_size: 96
 
 # Training
@@ -41,5 +41,5 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_strong_deep_96
+output_dir: outputs/thumos14_e2e_slowfast_test
 
