--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -28,18 +28,18 @@ fix_transform: false
 
 # Image
 # img_resize: 440
-img_resize: 110
+img_resize: 256
 # img_resize: 110
 # img_crop_size: 384
-img_crop_size: 96
+img_crop_size: 224
 # img_crop_size: 96
 
 # Training
 # act_reg: false
 # set_cost_class: 2
-# activation: 'gelu'
+activation: 'gelu'
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_test
+output_dir: outputs/thumos14_e2e_slowfast_test_
 
