--- a/configs/thumos14_randaug.yml
+++ b/configs/thumos14_randaug.yml
@@ -7,7 +7,7 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 enc_layers: 6
 dec_layers: 6
 dim_feedforward: 2048
-num_queries: 40
+num_queries: 100
 dropout: 0.1
 
 # data setting
@@ -23,16 +23,17 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+# fix_encoder: true
+fix_encoder: false
 fix_transform: false
 
 # Image
 # img_resize: 440
-img_resize: 256
-# img_resize: 110
 # img_crop_size: 384
-img_crop_size: 224
-# img_crop_size: 96
+img_resize: 110
+img_crop_size: 96
+# img_resize: 256
+# img_crop_size: 224
 
 # Training
 # act_reg: false
