--- a/configs/thumos14_randaug.yml
+++ b/configs/thumos14_randaug.yml
@@ -8,7 +8,7 @@ enc_layers: 6
 dec_layers: 6
 dim_feedforward: 2048
 num_queries: 100
-dropout: 0.1
+dropout: 0.0
 
 # data setting
 dataset_name: thumos14
@@ -24,14 +24,14 @@ lr: 0.0001
 batch_size: 4
 
 # fix_encoder: true
-fix_encoder: false
+fix_encoder: true
 fix_transform: false
 
 # Image
 # img_resize: 440
 # img_crop_size: 384
-img_resize: 110
-img_crop_size: 96
+img_resize: 256
+img_crop_size: 224
 # img_resize: 256
 # img_crop_size: 224
 
@@ -39,7 +39,7 @@ img_crop_size: 96
 # act_reg: false
 # set_cost_class: 2
 # activation: 'gelu'
-rand_augment_param: rand-m6-n1-mstd0.5-inc1
+rand_augment_param: rand-m1-n1-mstd0.5-inc1
 
 # output
 output_dir: outputs/thumos14_e2e_slowfast_test
