--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -23,8 +23,8 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: false
-fix_transform: false
+fix_encoder: true
+fix_transform: true
 
 # Image
 # img_resize: 440
