--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -23,16 +23,16 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+fix_encoder: false
 fix_transform: true
 
 # Image
 # img_resize: 440
-img_resize: 256
-# img_resize: 110
+# img_resize: 256
+img_resize: 110
 # img_crop_size: 384
-img_crop_size: 224
-# img_crop_size: 96
+# img_crop_size: 224
+img_crop_size: 96
 
 # Training
 # act_reg: false
