--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -23,8 +23,8 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
-fix_transform: false
+fix_encoder: false
+fix_transform: true
 
 # Image
 # img_resize: 440
@@ -42,4 +42,4 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n3-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_tune_3
+output_dir: outputs/thumos14_e2e_slowfast_no_aug
