--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -24,7 +24,7 @@ lr: 0.0001
 batch_size: 4
 
 fix_encoder: false
-fix_transform: true
+fix_transform: false
 
 # Image
 # img_resize: 440
@@ -42,4 +42,4 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n3-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_no_aug
+output_dir: outputs/thumos14_e2e_slowfast_pyramid_0
