--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -23,16 +23,16 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+fix_encoder: false
 fix_transform: false
-neck: pyramid
+neck: identity
 
 # Image
-# img_resize: 440
-img_resize: 256
+img_resize: 440
+# img_resize: 256
 # img_resize: 110
-# img_crop_size: 384
-img_crop_size: 224
+img_crop_size: 384
+# img_crop_size: 224
 # img_crop_size: 96
 
 # Training
@@ -43,4 +43,4 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n3-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_tuner_256_pyramid_residual_1
+output_dir: outputs/thumos14_e2e_slowfast_384
