--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -23,18 +23,19 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+# fix_encoder: true
+fix_encoder: false
 fix_transform: false
-neck: pyramid
-# neck: identity
+# neck: pyramid
+neck: identity
 
 # Image
 # img_resize: 440
-img_resize: 256
-# img_resize: 110
+# img_resize: 256
+img_resize: 110
 # img_crop_size: 384
-img_crop_size: 224
-# img_crop_size: 96
+# img_crop_size: 224
+img_crop_size: 96
 
 # Training
 # act_reg: false
@@ -44,4 +45,4 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n3-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_pyramid_mlp_residual_x
+output_dir: outputs/thumos14_reproduce
