--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -26,8 +26,8 @@ batch_size: 4
 # fix_encoder: true
 fix_encoder: false
 fix_transform: false
-# neck: pyramid
-neck: identity
+neck: pyramid
+# neck: identity
 
 # Image
 # img_resize: 440
