--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -14,7 +14,7 @@ dropout: 0.1
 dataset_name: thumos14
 feature: img10fps
 online_slice: true
-slice_len: 256
+slice_len: 512
 slice_overlap: 0.75
 test_slice_overlap: 0.25
 input_type: image
@@ -24,10 +24,10 @@ lr: 0.0001
 batch_size: 4
 
 # fix_encoder: true
-fix_encoder: true
+fix_encoder: false
 fix_transform: false
-neck: pyramid
-# neck: identity
+# neck: pyramid
+neck: identity
 
 # Image
 # img_resize: 440
