--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -23,11 +23,11 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-# fix_encoder: true
-fix_encoder: false
+fix_encoder: true
+# fix_encoder: false
 fix_transform: false
-# neck: pyramid
-neck: identity
+neck: pyramid
+# neck: identity
 
 # Image
 # img_resize: 440
