--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -6,11 +6,12 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 # model setting
 enc_layers: 4
 dec_layers: 4
-dim_feedforward: 2048
+# dim_feedforward: 2048
+dim_feedforward: 1024
 num_queries: 40
 dropout: 0.1
-# temperature: 10000
-temperature: 20
+temperature: 10000
+# temperature: 20
 
 # data setting
 dataset_name: thumos14
@@ -25,7 +26,7 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+fix_encoder: false
 # fix_encoder: false
 fix_transform: false
 # neck: pyramid
@@ -33,18 +34,18 @@ neck: identity
 
 # Image
 # img_resize: 440
-img_resize: 256
-# img_resize: 110
+# img_resize: 256
+img_resize: 110
 # img_crop_size: 384
-img_crop_size: 224
-# img_crop_size: 96
+# img_crop_size: 224
+img_crop_size: 96
 
 # Training
 # act_reg: false
 # set_cost_class: 2
 # activation: 'gelu'
 # rand_augment_param: rand-m7-n4-mstd0.5-inc1
-rand_augment_param: rand-m7-n2-mstd0.5-inc1
+rand_augment_param: rand-m7-n3-mstd0.5-inc1
 
 # output
 output_dir: outputs/thumos14_tune
