--- a/configs/thumos14_randaug.yml
+++ b/configs/thumos14_randaug.yml
@@ -23,11 +23,12 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
+fix_encoder: false
 # fix_encoder: true
-fix_encoder: true
 fix_transform: false
-neck: pyramid
-lr_backbone: 1e-4
+# neck: pyramid
+neck: identity
+# lr_backbone: 1e-4
 
 # Image
 # img_resize: 440
