--- a/configs/thumos14_randaug.yml
+++ b/configs/thumos14_randaug.yml
@@ -23,9 +23,9 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: false
+fix_encoder: true
 # fix_encoder: true
-fix_transform: true
+fix_transform: false
 # neck: pyramid
 neck: identity
 # lr_backbone: 1e-4
