--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -29,8 +29,8 @@ batch_size: 4
 fix_encoder: true
 # fix_encoder: false
 fix_transform: false
-# neck: pyramid
-neck: identity
+neck: pyramid
+# neck: identity
 
 
 # Image
