--- a/configs/thumos14_randaug.yml
+++ b/configs/thumos14_randaug.yml
@@ -23,18 +23,18 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+fix_encoder: false
 # fix_encoder: true
-fix_transform: true
+fix_transform: false
 # neck: pyramid
 neck: identity
-# lr_backbone: 1e-4
+lr_backbone: 1e-5
 
 # Image
 # img_resize: 440
 # img_crop_size: 384
-img_resize: 256
-img_crop_size: 224
+img_resize: 110
+img_crop_size: 96
 # img_resize: 256
 # img_crop_size: 224
 
