--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -10,8 +10,8 @@ dec_layers: 4
 dim_feedforward: 1024
 num_queries: 40
 dropout: 0.1
-temperature: 10000
-# temperature: 20
+# temperature: 10000
+temperature: 20
 
 # data setting
 dataset_name: thumos14
@@ -30,7 +30,7 @@ fix_encoder: true
 # fix_encoder: false
 fix_transform: false
 neck: pyramid
-lr_backbone: 1e-4
+lr_backbone: 0.0001
 # neck: identity
 
 
@@ -47,7 +47,7 @@ img_crop_size: 224
 # set_cost_class: 2
 # activation: 'gelu'
 # rand_augment_param: rand-m7-n4-mstd0.5-inc1
-rand_augment_param: rand-m7-n3-mstd0.5-inc1
+rand_augment_param: rand-m7-n2-mstd0.5-inc1
 
 # output
 output_dir: outputs/thumos14_tune
