--- a/configs/thumos14_randaug.yml
+++ b/configs/thumos14_randaug.yml
@@ -7,28 +7,30 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 enc_layers: 4
 dec_layers: 4
 dim_feedforward: 1024
+# num_queries: 100
 num_queries: 40
 dropout: 0.1
+# temperature: 20
 
 # data setting
 dataset_name: thumos14
-feature: img10fps
+feature: img20fps
 online_slice: true
-slice_len: 256
+slice_len: 512
 slice_overlap: 0.75
 test_slice_overlap: 0.25
 input_type: image
 
 # training setting (not finialized)
 lr: 0.0001
-batch_size: 2
+batch_size: 4
 
 fix_encoder: false
 # fix_encoder: true
 fix_transform: false
 # neck: pyramid
 neck: identity
-lr_backbone: 0.00001
+# lr_backbone: 0.000005
 
 # Image
 # img_resize: 440
