--- a/configs/thumos14_randaug.yml
+++ b/configs/thumos14_randaug.yml
@@ -14,9 +14,9 @@ temperature: 20
 
 # data setting
 dataset_name: thumos14
-feature: img20fps
+feature: img10fps
 online_slice: true
-slice_len: 512
+slice_len: 256
 slice_overlap: 0.75
 test_slice_overlap: 0.25
 input_type: image
@@ -25,12 +25,12 @@ input_type: image
 lr: 0.0001
 batch_size: 2
 
-fix_encoder: false
-# fix_encoder: true
+# fix_encoder: false
+fix_encoder: true
 fix_transform: false
-# neck: pyramid
-neck: identity
-# lr_backbone: 0.000005
+neck: pyramid
+# neck: identity
+lr_backbone: 0.0001
 
 # Image
 # img_resize: 440
