--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -1,7 +1,7 @@
 # e2e setting
-encoder: slowfast
-slowfast_depth: 50
-pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb_20200728-145f1097.pth
+encoder: video_swin
+size: tiny
+pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_tiny_patch244_window877_kinetics400_1k.pth
 
 # model setting
 enc_layers: 4
@@ -26,12 +26,12 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+fix_encoder: false
 # fix_encoder: false
 fix_transform: false
-neck: pyramid
-lr_backbone: 0.0001
-# neck: identity
+# neck: pyramid
+lr_backbone: 0.00001
+neck: identity
 
 
 # Image
@@ -47,7 +47,7 @@ img_crop_size: 224
 # set_cost_class: 2
 # activation: 'gelu'
 # rand_augment_param: rand-m7-n4-mstd0.5-inc1
-rand_augment_param: rand-m7-n2-mstd0.5-inc1
+rand_augment_param: rand-m8-n3-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_tune
+output_dir: outputs/thumos14_swin
