--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -5,6 +5,9 @@ encoder: video_swin
 size: small
 pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
 
+# size: base
+# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_base_patch244_window877_kinetics600_22k.pth
+
 # model setting
 enc_layers: 4
 dec_layers: 4
