--- a/configs/thumos14_tuning.yml
+++ b/configs/thumos14_tuning.yml
@@ -1,13 +1,13 @@
 # e2e setting
-encoder: slowfast
-slowfast_depth: 50
-pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb_20200728-145f1097.pth
+# encoder: slowfast
+# slowfast_depth: 50
+# pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb_20200728-145f1097.pth
 
-# encoder: video_swin
+encoder: video_swin
 # size: tiny
 # pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_tiny_patch244_window877_kinetics400_1k.pth
-# size: small
-# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
+size: small
+pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
 
 
 # model setting
@@ -35,9 +35,9 @@ batch_size: 4
 # fix_encoder: false
 fix_encoder: true
 fix_transform: false
-neck: pyramid
-# neck: identity
-lr_backbone: 0.0001
+# neck: pyramid
+neck: identity
+# lr_backbone: 0.0001
 
 # Image
 # img_resize: 440
@@ -54,4 +54,4 @@ img_crop_size: 224
 rand_augment_param: rand-m8-n3-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_tuning
+output_dir: outputs/thumos14_e2e_slowfast_identity
