--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -35,7 +35,7 @@ fix_encoder: false
 # fix_encoder: false
 fix_transform: false
 # neck: pyramid
-lr_backbone: 0.00001
+# lr_backbone: 0.00001
 neck: identity
 
 
@@ -51,8 +51,8 @@ img_crop_size: 224
 # act_reg: false
 # set_cost_class: 2
 # activation: 'gelu'
-# rand_augment_param: rand-m7-n4-mstd0.5-inc1
-rand_augment_param: rand-m8-n3-mstd0.5-inc1
+rand_augment_param: rand-m7-n4-mstd0.5-inc1
+# rand_augment_param: rand-m8-n3-mstd0.5-inc1
 
 # output
 output_dir: outputs/thumos14_swin
