--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -26,12 +26,12 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-fix_encoder: true
+fix_encoder: false
 # fix_encoder: false
 fix_transform: false
-neck: pyramid
-lr_backbone: 0.0001
-# neck: identity
+# neck: pyramid
+# lr_backbone: 0.0001
+neck: identity
 
 
 # Image
@@ -46,8 +46,8 @@ img_crop_size: 224
 # act_reg: false
 # set_cost_class: 2
 # activation: 'gelu'
-# rand_augment_param: rand-m7-n4-mstd0.5-inc1
-rand_augment_param: rand-m7-n2-mstd0.5-inc1
+rand_augment_param: rand-m7-n4-mstd0.5-inc1
+# rand_augment_param: rand-m7-n2-mstd0.5-inc1
 
 # output
 output_dir: outputs/thumos14_tune
