--- a/configs/thumos14_tuning.yml
+++ b/configs/thumos14_tuning.yml
@@ -35,9 +35,9 @@ batch_size: 4
 # fix_encoder: false
 fix_encoder: true
 fix_transform: false
-neck: pyramid
-lr_backbone: 0.0001
-# neck: identity
+# neck: pyramid
+# lr_backbone: 0.0001
+neck: identity
 
 # Image
 # img_resize: 440
