--- a/configs/thumos14_tuning.yml
+++ b/configs/thumos14_tuning.yml
@@ -36,7 +36,7 @@ batch_size: 4
 fix_encoder: true
 fix_transform: false
 neck: pyramid
-lr_backbone: 0.0001
+# lr_backbone: 0.0001
 # neck: identity
 
 # Image
