--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -4,17 +4,17 @@ encoder: video_swin
 # pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_tiny_patch244_window877_kinetics400_1k.pth
 # size: small
 # pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
-
 size: base
 pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_base_patch244_window877_kinetics600_22k.pth
 
 # model setting
 enc_layers: 4
 dec_layers: 4
-# dim_feedforward: 2048
-dim_feedforward: 1024
-num_queries: 40
-dropout: 0.1
+dim_feedforward: 2048
+# dim_feedforward: 1024
+num_queries: 100
+# dropout: 0.1
+dropout: 0.0
 # temperature: 10000
 temperature: 20
 
