--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -2,25 +2,27 @@
 encoder: video_swin
 # size: tiny
 # pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_tiny_patch244_window877_kinetics400_1k.pth
-size: small
-pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
-# size: base
-# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_base_patch244_window877_kinetics600_22k.pth
+# size: small
+# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
+size: base
+pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_base_patch244_window877_kinetics600_22k.pth
 
 # model setting
 enc_layers: 4
 dec_layers: 4
-dim_feedforward: 2048
-# dim_feedforward: 1024
-num_queries: 100
-# dropout: 0.1
-dropout: 0.0
+# dim_feedforward: 2048
+dim_feedforward: 1024
+# num_queries: 100
+num_queries: 40
+dropout: 0.1
+# dropout: 0.0
 # temperature: 10000
 temperature: 20
 
 # data setting
 dataset_name: thumos14
 feature: img10fps
+# feature: img20fps
 online_slice: true
 slice_len: 256
 slice_overlap: 0.75
@@ -56,5 +58,5 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 # rand_augment_param: rand-m8-n3-mstd0.5-inc1
 
 # output
-# output_dir: outputs/thumos14_swin_base_
-output_dir: outputs/thumos14_swin_small_
+output_dir: outputs/thumos14_swin_base_tune
+# output_dir: outputs/thumos14_swin_small_
