--- a/configs/thumos14_tuning.yml
+++ b/configs/thumos14_tuning.yml
@@ -33,7 +33,7 @@ lr: 0.0001
 batch_size: 4
 
 # fix_encoder: false
-fix_encoder: true
+fix_encoder: false
 fix_transform: false
 neck: pyramid
 # lr_backbone: 0.0001
