--- a/configs/thumos14_tuning.yml
+++ b/configs/thumos14_tuning.yml
@@ -13,17 +13,20 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 # model setting
 enc_layers: 4
 dec_layers: 4
-dim_feedforward: 1024
-# num_queries: 100
-num_queries: 40
-dropout: 0.1
+# dim_feedforward: 1024
+dim_feedforward: 2048
+# num_queries: 40
+num_queries: 100
+# dropout: 0.1
+dropout: 0.0
 temperature: 20
 
 # data setting
 dataset_name: thumos14
-feature: img10fps
+feature: img30fps
 online_slice: true
-slice_len: 256
+# slice_len: 256
+slice_len: 768
 slice_overlap: 0.75
 test_slice_overlap: 0.25
 input_type: image
@@ -36,16 +39,16 @@ batch_size: 4
 fix_encoder: true
 fix_transform: false
 neck: pyramid
-# lr_backbone: 0.0001
+lr_backbone: 0.00001
 # neck: identity
 
 # Image
 # img_resize: 440
 # img_crop_size: 384
-img_resize: 110
-img_crop_size: 96
-# img_resize: 256
-# img_crop_size: 224
+# img_resize: 110
+# img_crop_size: 96
+img_resize: 256
+img_crop_size: 224
 
 # Training
 # act_reg: false
