--- a/configs/thumos14_tuning.yml
+++ b/configs/thumos14_tuning.yml
@@ -35,8 +35,8 @@ input_type: image
 lr: 0.0001
 batch_size: 4
 
-# fix_encoder: false
 fix_encoder: true
+# fix_encoder: true
 fix_transform: false
 neck: pyramid
 lr_backbone: 0.00001
@@ -57,4 +57,4 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_tune
+output_dir: outputs/thumos14_e2e_slowfast_30fps_tune
