--- a/configs/thumos14_full.yml
+++ b/configs/thumos14_full.yml
@@ -13,13 +13,14 @@ pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/s
 # model setting
 enc_layers: 4
 dec_layers: 4
-# dim_feedforward: 1024
-dim_feedforward: 2048
-# num_queries: 40
-num_queries: 100
-# dropout: 0.1
-dropout: 0.0
-temperature: 20
+dim_feedforward: 1024
+# dim_feedforward: 2048
+num_queries: 40
+# num_queries: 100
+dropout: 0.1
+# dropout: 0.0
+temperature: 10000
+# temperature: 20
 
 # data setting
 dataset_name: thumos14
@@ -57,4 +58,4 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_10fps_tune
+output_dir: outputs/thumos14_e2e_slowfast_10fps_full
