--- a/configs/thumos14_tuning.yml
+++ b/configs/thumos14_tuning.yml
@@ -38,9 +38,9 @@ batch_size: 4
 fix_encoder: true
 # fix_encoder: true
 fix_transform: false
-neck: pyramid
-lr_backbone: 0.00001
-# neck: identity
+# neck: pyramid
+# lr_backbone: 0.00001
+neck: identity
 
 # Image
 # img_resize: 440
@@ -57,4 +57,4 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_10fps_tune
+output_dir: outputs/thumos14_e2e_slowfast_10fps_identity
