--- a/configs/tuner_exp.yml
+++ b/configs/tuner_exp.yml
@@ -40,9 +40,9 @@ batch_size: 4
 # fix_encoder: true
 fix_encoder: true
 fix_transform: false
-# neck: pyramid
-# lr_backbone: 0.00001
-neck: identity
+neck: pyramid
+lr_backbone: 0.00001
+# neck: identity
 
 # Image
 # img_resize: 440
