--- a/configs/thumos14_full.yml
+++ b/configs/thumos14_full.yml
@@ -1,13 +1,13 @@
 # e2e setting
-encoder: slowfast
-slowfast_depth: 50
-pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb_20200728-145f1097.pth
+# encoder: slowfast
+# slowfast_depth: 50
+# pretrained_model: https://download.openmmlab.com/mmaction/recognition/slowfast/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb/slowfast_r50_256p_4x16x1_256e_kinetics400_rgb_20200728-145f1097.pth
 
 # encoder: video_swin
 # size: tiny
 # pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_tiny_patch244_window877_kinetics400_1k.pth
-# size: small
-# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
+size: small
+pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
 
 
 # model setting
@@ -19,8 +19,8 @@ num_queries: 40
 # num_queries: 100
 dropout: 0.1
 # dropout: 0.0
-# temperature: 10000
-temperature: 20
+temperature: 10000
+# temperature: 20
 
 # data setting
 dataset_name: thumos14
