--- a/configs/tuner_exp.yml
+++ b/configs/tuner_exp.yml
@@ -41,7 +41,7 @@ fix_encoder: true
 # fix_encoder: false
 fix_transform: false
 neck: pyramid
-# lr_backbone: 0.00001
+lr_backbone: 0.0001
 # neck: identity
 
 # Image
