--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -2,10 +2,10 @@
 encoder: video_swin
 # size: tiny
 # pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_tiny_patch244_window877_kinetics400_1k.pth
-# size: small
-# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
-size: base
-pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_base_patch244_window877_kinetics600_22k.pth
+size: small
+pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
+# size: base
+# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_base_patch244_window877_kinetics600_22k.pth
 
 # model setting
 enc_layers: 4
@@ -58,5 +58,5 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 # rand_augment_param: rand-m8-n3-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_swin_base_tune
+output_dir: outputs/thumos14_swin_small_full
 # output_dir: outputs/thumos14_swin_small_
