--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -33,8 +33,8 @@ input_type: image
 lr: 0.0001
 batch_size: 1
 
-# fix_encoder: false
-fix_encoder: true
+fix_encoder: false
+# fix_encoder: true
 # fix_encoder: false
 fix_transform: false
 # neck: pyramid
