--- a/configs/tuner_exp_swin.yml
+++ b/configs/tuner_exp_swin.yml
@@ -6,8 +6,10 @@
 encoder: video_swin
 # size: tiny
 # pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_tiny_patch244_window877_kinetics400_1k.pth
-size: small
-pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
+# size: small
+# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
+size: base
+pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_base_patch244_window877_kinetics600_22k.pth
 
 
 # model setting
