--- a/configs/thumos14_tuning.yml
+++ b/configs/thumos14_tuning.yml
@@ -39,9 +39,10 @@ batch_size: 4
 fix_encoder: true
 # fix_encoder: true
 fix_transform: false
+neck: mixer
 # neck: pyramid
-# lr_backbone: 0.00001
-neck: identity
+lr_backbone: 0.0001
+# neck: identity
 
 # Image
 # img_resize: 440
@@ -58,4 +59,4 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_10fps_identity
+output_dir: outputs/thumos14_e2e_slowfast_10fps_mixer
