--- a/configs/tuner_exp.yml
+++ b/configs/tuner_exp.yml
@@ -40,7 +40,8 @@ batch_size: 4
 fix_encoder: true
 # fix_encoder: false
 fix_transform: false
-neck: pyramid
+# neck: pyramid
+neck: mixer
 lr_backbone: 0.00001
 # neck: identity
 
