--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -10,8 +10,8 @@ dec_layers: 4
 dim_feedforward: 1024
 num_queries: 40
 dropout: 0.1
-# temperature: 10000
-temperature: 20
+temperature: 10000
+# temperature: 20
 
 # data setting
 dataset_name: thumos14
@@ -32,6 +32,7 @@ fix_transform: false
 # neck: pyramid
 # lr_backbone: 0.0001
 neck: identity
+look_forward_twice: true
 
 
 # Image
@@ -50,4 +51,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 # rand_augment_param: rand-m7-n2-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_tune
+output_dir: outputs/thumos14_lft
