--- a/configs/thumos14_randaug.yml
+++ b/configs/thumos14_randaug.yml
@@ -31,15 +31,16 @@ fix_transform: false
 # neck: pyramid
 neck: identity
 # lr_backbone: 0.0001
-two_stage: true
+two_stage: false
+act_reg: false
 
 # Image
 # img_resize: 440
 # img_crop_size: 384
-img_resize: 110
-img_crop_size: 96
-# img_resize: 256
-# img_crop_size: 224
+# img_resize: 110
+# img_crop_size: 96
+img_resize: 256
+img_crop_size: 224
 
 # Training
 # act_reg: false
@@ -48,5 +49,5 @@ img_crop_size: 96
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_test________
+output_dir: outputs/thumos14_e2e_slowfast_identity
 
