--- a/configs/thumos14_full.yml
+++ b/configs/thumos14_full.yml
@@ -20,8 +20,8 @@ dim_feedforward: 1024
 # dim_feedforward: 2048
 num_queries: 40
 # num_queries: 100
-dropout: 0.1
-# dropout: 0.0
+# dropout: 0.1
+dropout: 0.0
 temperature: 10000
 # temperature: 20
 
@@ -53,6 +53,9 @@ neck: identity
 # img_crop_size: 96
 img_resize: 256
 img_crop_size: 224
+act_reg: false
+two_stage: true
+mixed_selection: true
 look_forward_twice: false
 
 
