--- a/configs/thumos14_e2e_slowfast_tadtr.yml
+++ b/configs/thumos14_e2e_slowfast_tadtr.yml
@@ -9,7 +9,7 @@ dec_layers: 4
 # dim_feedforward: 2048
 dim_feedforward: 1024
 num_queries: 40
-dropout: 0.1
+dropout: 0.0
 temperature: 10000
 # temperature: 20
 
@@ -32,7 +32,9 @@ fix_transform: false
 # neck: pyramid
 # lr_backbone: 0.0001
 neck: identity
+act_reg: false
 two_stage: true
+mixed_selection: true
 look_forward_twice: false
 
 
