--- a/configs/thumos14_randaug.yml
+++ b/configs/thumos14_randaug.yml
@@ -31,8 +31,8 @@ fix_transform: false
 # neck: pyramid
 neck: identity
 # lr_backbone: 0.0001
-two_stage: false
-act_reg: true
+two_stage: true
+act_reg: false
 
 # Image
 # img_resize: 440
