--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -2,10 +2,10 @@
 encoder: video_swin
 # size: tiny
 # pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_tiny_patch244_window877_kinetics400_1k.pth
-size: small
-pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
-# size: base
-# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_base_patch244_window877_kinetics600_22k.pth
+# size: small
+# pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_small_patch244_window877_kinetics400_1k.pth
+size: base
+pretrained_model: https://github.com/SwinTransformer/storage/releases/download/v1.0.4/swin_base_patch244_window877_kinetics600_22k.pth
 
 # model setting
 enc_layers: 4
@@ -34,10 +34,10 @@ lr: 0.0001
 batch_size: 1
 
 # fix_encoder: false
-fix_encoder: true
+fix_encoder: false
 fix_transform: false
 # neck: mixer
-lr_backbone: 0.00001
+# lr_backbone: 0.00001
 neck: identity
 act_reg: true
 two_stage: false
@@ -46,11 +46,11 @@ look_forward_twice: false
 
 # Image
 # img_resize: 440
-img_resize: 256
-# img_resize: 110
 # img_crop_size: 384
-img_crop_size: 224
-# img_crop_size: 96
+# img_resize: 256
+# img_crop_size: 224
+img_resize: 110
+img_crop_size: 96
 
 # Training
 # act_reg: false
@@ -60,5 +60,5 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 # rand_augment_param: rand-m8-n3-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_swin_base_identity
+output_dir: outputs/thumos14_swin_base_full_96
 # output_dir: outputs/thumos14_swin_small_
