--- a/configs/thumos14_video_swin.yml
+++ b/configs/thumos14_video_swin.yml
@@ -14,8 +14,8 @@ dec_layers: 4
 dim_feedforward: 1024
 # num_queries: 100
 num_queries: 40
-# dropout: 0.1
-dropout: 0.0
+dropout: 0.1
+# dropout: 0.0
 temperature: 10000
 # temperature: 20
 
@@ -42,7 +42,7 @@ neck: identity
 act_reg: true
 two_stage: false
 mixed_selection: false
-look_forward_twice: false
+look_forward_twice: true
 
 # Image
 # img_resize: 440
@@ -63,4 +63,4 @@ rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
 # output_dir: outputs/thumos14_swin_base_full_168
-output_dir: outputs/thumos14_swin_base
+output_dir: outputs/thumos14_swin_base_identity_multi_scale_lft
