--- a/configs/tuner_exp.yml
+++ b/configs/tuner_exp.yml
@@ -41,8 +41,8 @@ fix_encoder: true
 # fix_encoder: false
 fix_transform: false
 # neck: pyramid
-neck: mixer
-lr_backbone: 0.00001
+neck: identity
+# lr_backbone: 0.00001
 act_reg: true
 two_stage: false
 mixed_selection: false
@@ -64,6 +64,6 @@ img_crop_size: 224
 rand_augment_param: rand-m7-n4-mstd0.5-inc1
 
 # output
-output_dir: outputs/thumos14_e2e_slowfast_10fps_multi_scale_mixer_lft_layer3
+output_dir: outputs/thumos14_e2e_slowfast_10fps_single_scale_pooler
 
 # tuner 48.77
